[gd_scene load_steps=15 format=2]

[ext_resource path="res://scr/actors/EnemyClass.tscn" type="PackedScene" id=1]
[ext_resource path="res://scr/enemy/Mob5.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/mouth4eyemobnormal.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/mouth4eyemob.png" type="Texture" id=4]
[ext_resource path="res://scr/items/CritDrop.tscn" type="PackedScene" id=5]
[ext_resource path="res://scr/items/StarGunDrop.tscn" type="PackedScene" id=6]
[ext_resource path="res://scr/items/DoubleShotDrop.tscn" type="PackedScene" id=7]
[ext_resource path="res://scr/items/MultiGunDrop.tscn" type="PackedScene" id=8]
[ext_resource path="res://scr/items/TripleShotDrop.tscn" type="PackedScene" id=9]
[ext_resource path="res://scr/items/ShieldDrop.tscn" type="PackedScene" id=10]
[ext_resource path="res://scr/items/SpeedDrop.tscn" type="PackedScene" id=11]
[ext_resource path="res://scr/items/SpinDrop.tscn" type="PackedScene" id=12]
[ext_resource path="res://scr/items/HealthDrop.tscn" type="PackedScene" id=13]
[ext_resource path="res://scr/bullets/EB1.tscn" type="PackedScene" id=14]

[node name="Mob5" instance=ExtResource( 1 )]
script = ExtResource( 2 )
mob_max_health = 5.0
can_shoot = true
bullets_array = [ ExtResource( 14 ) ]
drop_array = [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 9 ) ]

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )
normal_map = ExtResource( 3 )
hframes = 4
vframes = 5

[node name="Position2D" parent="Sprite" index="1"]
position = Vector2( 0, 8.5 )

[node name="Position2DEyes" type="Position2D" parent="Sprite" index="2"]
position = Vector2( -21.5, 16.5 )
rotation = 2.31431

[node name="Position2DEyes2" type="Position2D" parent="Sprite" index="3"]
position = Vector2( -21.75, -16.25 )
rotation = 3.96713

[node name="Position2DEyes3" type="Position2D" parent="Sprite" index="4"]
position = Vector2( 21.75, -16.75 )
rotation = -0.745256

[node name="Position2DEyes4" type="Position2D" parent="Sprite" index="5"]
position = Vector2( 22, 16.5 )
rotation = 0.74351

[node name="aim" parent="Sprite" index="6"]
visible = false

[node name="CollisionShape2D" parent="." index="2"]
visible = false

[node name="VisibilityEnabler2D" parent="." index="3"]
visible = false

[node name="DelayTimer" type="Timer" parent="." index="10"]
wait_time = 0.1
